5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1674_1880.log
== TEST (2019-04-30 10:54:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("qual seu mes? "))

if not(1<=x<=12)
	print("numero do mes invalido")
else:
	if(x==1):
		print("janeiro")
	if(x==2):
		print("fevereiro")
	if(x==3):
		print("marco")
	if(x==4):
		print("abril")
	if(x==5):
		print("maio")
	if(x==6):
		print("junho")
	if(x==7):
		print("julho")
	if(x==8):
		print("agosto")
	if(x==9):
		print("setembro")
	if(x==10):
		print("outubro")
	if(x==11):
		print("novembro")
	if(x==12):
		print("dezembro")
-- ERROR:
File "XXXX", line 4
    if not(1<=x<=12)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:55:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("qual seu mes? "))

if not(1<=x<=12)
	print("numero do mes invalido")
else:
	if(x==1):
		print("janeiro")
	if(x==2):
		print("fevereiro")
	if(x==3):
		print("marco")
	if(x==4):
		print("abril")
	if(x==5):
		print("maio")
	if(x==6):
		print("junho")
	if(x==7):
		print("julho")
	if(x==8):
		print("agosto")
	if(x==9):
		print("setembro")
	if(x==10):
		print("outubro")
	if(x==11):
		print("novembro")
	if(x==12):
		print("dezembro")
-- ERROR:
File "XXXX", line 4
    if not(1<=x<=12)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:55:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("qual seu mes? "))

if not(1<=x<=12):
	print("numero do mes invalido")
else:
	if(x==1):
		print("janeiro")
	if(x==2):
		print("fevereiro")
	if(x==3):
		print("marco")
	if(x==4):
		print("abril")
	if(x==5):
		print("maio")
	if(x==6):
		print("junho")
	if(x==7):
		print("julho")
	if(x==8):
		print("agosto")
	if(x==9):
		print("setembro")
	if(x==10):
		print("outubro")
	if(x==11):
		print("novembro")
	if(x==12):
		print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:55:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("qual seu mes? "))

if not(1<=x<=12):
	print("numero do mes invalido")
else:
	if(x==1):
		print("janeiro")
	if(x==2):
		print("fevereiro")
	if(x==3):
		print("marco")
	if(x==4):
		print("abril")
	if(x==5):
		print("maio")
	if(x==6):
		print("junho")
	if(x==7):
		print("julho")
	if(x==8):
		print("agosto")
	if(x==9):
		print("setembro")
	if(x==10):
		print("outubro")
	if(x==11):
		print("novembro")
	if(x==12):
		print("dezembro")
-- EXECUTION TIME:
0.147277
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:58:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("qual seu mes? "))

if (1<=x<=12):
	if(x==1):
		print("janeiro")
	if(x==2):
		print("fevereiro")
	if(x==3):
		print("marco")
	if(x==4):
		print("abril")
	if(x==5):
		print("maio")
	if(x==6):
		print("junho")
	if(x==7):
		print("julho")
	if(x==8):
		print("agosto")
	if(x==9):
		print("setembro")
	if(x==10):
		print("outubro")
	if(x==11):
		print("novembro")
	if(x==12):
		print("dezembro")
else: 
	print("numero de mes invalido")
-- EXECUTION TIME:
0.277499
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
